# self_assembly_modelling

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: lattice.cpp  lattice.h  orientation.h  particle.cpp  particle.h
src/utils/: randomizer_with_sentinel_shift.h  utils.cpp  utils.h
